Latest update to sliders
Latest working version

--- a/incentives.html
+++ b/incentives.html
@@ -30,8 +30,16 @@
   <br>
   <br>
   <hr>
+  <label for="balance">Original Balance</label>
+  <span class="currency-symbol">Â£</span><input class="currency" type="tel" id="original-balance" maxlength="6" min="0.01" value="10000" step="0.01" readonly="readonly">
+  <br>
   <label for="balance">Balance</label>
-  <span class="currency-symbol">£</span><input class="currency" type="number" id="balance" min="0.01" value="1000" step="0.01">
+  <span class="currency-symbol">Â£</span><input class="currency" type="tel" id="balance" maxlength="6" min="0.01" value="10000" step="0.01" readonly="readonly">
+  <br>
+  <label for="npv">NPV</label>
+  <span class="percentage"></span><input class="percentage" type="number" id="npv" maxlength="3" min="0.1" value="64.2" step="0.1" readonly="readonly">
+  <br>
   <label for="balance">Disposable Income</label>
-  <span class="currency-symbol">£</span><input class="currency" type="number" id="disposable" min="0.01" value="100" step="0.01">
+  <span class="currency-symbol">Â£</span><input class="currency" type="number" id="disposable" min="0.01" value="5000" step="0.01">
 </div>
+<p style="text-align:center; font-size:20px"></p>
